# cpp-repo

./: .gitignore  CMakeLists.txt  bitbucket-pipelines.yml  sonar-project.properties
.github/workflows/: cmake.yml
inc/: module1.hpp
src/: main.cpp  module1.cpp
test/: module1Test.cpp
